fix(table): 修复 stretchHeight+bordered 模式下数据为空时左右边框未显示问题 (5.0) (#3484)

--- a/packages/ui/table/src/styles/table.scss
+++ b/packages/ui/table/src/styles/table.scss
@@ -77,7 +77,7 @@ $emptyContent: '#{$component-prefix}-table-body-empty-content' !default;
 
     // 在 stretchHeight + bordered 模式下，将左右边框从 wrapper 移到表格内容区域
     // 避免边框延伸到空白区域
-    &.#{$prefix}--bordered {
+    &.#{$prefix}--bordered:not(.#{$prefix}--empty) {
       > .#{$prefix}__wrapper {
         border-inline-start: none;
         border-inline-end: none;
